// Copyright 2024 The Bazel Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bazel.intellij;

option java_package = "com.google.idea.blaze.qsync.java.artifacts";
option java_outer_classname = "AspectProto";

// A reference to an output artifact from the build_dependencies.bzl aspect.
message OutputArtifact {
  // All paths are build-output relative
  oneof path {
    // a plain file
    string file = 1;
    // a directory
    string directory = 2;
  }
}

